action creators and payload

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redux Counter</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Redux CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.2.1/redux.min.js"></script>
   </head>
   <body>
     <div class="counter-container">
@@ -14,8 +16,8 @@
       <button id="decrementBtn">Decrement</button>
     </div>
 
-    <!-- Redux CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.2.1/redux.min.js"></script>
+    <!-- script -->
+
     <script src="script.js"></script>
   </body>
 </html>
