dark mode toggler added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bit By Bit - Fullstack Learning Journey</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-white text-black dark:bg-gray-900 dark:text-slate-200">
+    <div
+      id="root"
+      class="container mx-auto px-4 py-6 dark:text-[rgb(226,232,240)] dark:bg-gray-900"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
