--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bit By Bit - Fullstack Learning Journey</title>
+
+    <script>
+      try {
+        const theme = localStorage.getItem('theme');
+        if (theme === 'dark') {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      } catch (e) {}
+    </script>
   </head>
-  <body class="bg-white text-black dark:bg-gray-900 dark:text-slate-200">
-    <div
-      id="root"
-      class="container mx-auto px-4 py-6 dark:text-[rgb(226,232,240)] dark:bg-gray-900"
-    ></div>
+  <body
+    class="bg-white text-black dark:bg-gray-900 dark:text-slate-200 transition-colors duration-300"
+  >
+    <div id="root" class="container mx-auto px-4 py-6"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
