--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body
     class="bg-white text-black dark:bg-gray-900 dark:text-slate-200 transition-colors duration-300"
   >
-    <div id="root" class="container mx-auto px-4 py-6"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
